refactor: reorganize domain classes into dedicated project
- Create new Scheduler.Domain project for domain-specific logic
- Organize domain classes into logical subdirectories (Calendars, Tasks, Shared)

--- a/backend/Scheduler.Infrastructure/Scheduler.Infrastructure.csproj
+++ b/backend/Scheduler.Infrastructure/Scheduler.Infrastructure.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj" />
+      <ProjectReference Include="..\Scheduler.Application\Scheduler.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
