--- a/backend/Scheduler.Api/Scheduler.Api.csproj
+++ b/backend/Scheduler.Api/Scheduler.Api.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj" />
+      <ProjectReference Include="..\Scheduler.Application\Scheduler.Application.csproj" />
       <ProjectReference Include="..\Scheduler.Infrastructure\Scheduler.Infrastructure.csproj" />
     </ItemGroup>
 
