--- a/backend/Scheduler.Tests/Scheduler.Tests.csproj
+++ b/backend/Scheduler.Tests/Scheduler.Tests.csproj
@@ -24,7 +24,8 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Scheduler.Api\Scheduler.Api.csproj"/>
-        <ProjectReference Include="..\Scheduler.Core\Scheduler.Core.csproj"/>
+        <ProjectReference Include="..\Scheduler.Application\Scheduler.Application.csproj" />
+        <ProjectReference Include="..\Scheduler.Domain\Scheduler.Domain.csproj"/>
         <ProjectReference Include="..\Scheduler.Infrastructure\Scheduler.Infrastructure.csproj"/>
     </ItemGroup>
 
