--- a/backend/Scheduler.Application/Scheduler.Application.csproj
+++ b/backend/Scheduler.Application/Scheduler.Application.csproj
@@ -4,11 +4,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Scheduler.Core</RootNamespace>
+        <RootNamespace>Scheduler.Application</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Scheduler.Domain\Scheduler.Domain.csproj" />
+        <ProjectReference Include="..\Scheduler.Domain\Scheduler.Domain.csproj"/>
     </ItemGroup>
 
 </Project>
