refactor: move configuration to application layer and rename ScheduleCalendar
- Move UserScheduleConfig and related configuration from domain to application layer
  to better separate configuration concerns from core domain logic
- Rename ScheduleCalendar to ScheduleWindow to better reflect its responsibility
  of managing a specific time window rather than an entire calendar
- Update related interfaces and services to use new structure

--- a/backend/Scheduler.Domain/Scheduler.Domain.csproj
+++ b/backend/Scheduler.Domain/Scheduler.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Scheduler.Shared\Scheduler.Shared.csproj"/>
+    </ItemGroup>
+
 </Project>
