--- a/backend/Scheduler.Application/Scheduler.Application.csproj
+++ b/backend/Scheduler.Application/Scheduler.Application.csproj
@@ -11,4 +11,8 @@
         <ProjectReference Include="..\Scheduler.Domain\Scheduler.Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Mapping\" />
+    </ItemGroup>
+
 </Project>
