chore: Add strict Standalone and layout path alias to tsconfig

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,13 +27,14 @@
       "@shared/*": ["shared/*"],
       "@core/*": ["core/*"],
       "@features/*": ["features/*"],
-      "@design/*": ["design-system/*"]
+      "@layout/*": ["layout/*"]
     }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictStandalone": true
   }
 }
