--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,18 @@
 {
   "name": "frontend",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "eslint \"src/**/*.{ts,html}\" --fix",
+    "format": "prettier \"src/**/*.{ts,html,scss,css,md,json}\" --write",
+    "format:check": "prettier \"src/**/*.{ts,html,scss,css,md,json}\" --check",
+    "lint:check": "eslint \"src/**/*.{ts,html}\"",
+    "fix": "npm run format && npm run lint",
     "prepare": "cd .. && husky frontend/.husky"
   },
   "lint-staged": {
