--- a/backend/src/SharedKernel/SharedKernel.csproj
+++ b/backend/src/SharedKernel/SharedKernel.csproj
@@ -11,4 +11,8 @@
         <Folder Include="Domain\Events\"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11"/>
+    </ItemGroup>
+
 </Project>
