--- a/backend/src/Calendar/Calendar.Application/Calendar.Application.csproj
+++ b/backend/src/Calendar/Calendar.Application/Calendar.Application.csproj
@@ -10,4 +10,9 @@
         <ProjectReference Include="..\Calendar.Domain\Calendar.Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="DataTransfer\"/>
+        <Folder Include="Operations\"/>
+    </ItemGroup>
+
 </Project>
