refactor(Scheduling.Application): Reorganise Scheduling Application in the same way as Calendar Application

--- a/backend/src/Scheduling/Scheduling.Application/Scheduling.Application.csproj
+++ b/backend/src/Scheduling/Scheduling.Application/Scheduling.Application.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\..\SharedKernel\SharedKernel.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="DataTransfer\Mapping\"/>
+    </ItemGroup>
+
 </Project>
