refactor(Scheduling): Move PriorityLevel enum from Shared to Scheduling, Create DTO in Application

--- a/backend/src/Scheduling/Scheduling.Application/Scheduling.Application.csproj
+++ b/backend/src/Scheduling/Scheduling.Application/Scheduling.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\SharedKernel\SharedKernel.csproj"/>
+        <ProjectReference Include="..\Scheduling.Domain\Scheduling.Domain.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
