test: Disable implementation of old tests

--- a/backend/tests/Scheduler.Shared.Tests/Scheduler.Shared.Tests.csproj
+++ b/backend/tests/Scheduler.Shared.Tests/Scheduler.Shared.Tests.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Scheduler.Shared\Scheduler.Shared.csproj"/>
+        <ProjectReference Include="..\..\src\SharedKernel\SharedKernel.csproj"/>
     </ItemGroup>
-
+    
 </Project>
