--- a/backend/tests/SharedKernel.Tests/SharedKernel.Tests.csproj
+++ b/backend/tests/SharedKernel.Tests/SharedKernel.Tests.csproj
@@ -7,13 +7,12 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>Scheduler.Shared.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-        <PackageReference Include="FluentAssertions" Version="7.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
-        <PackageReference Include="Moq" Version="4.20.72"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -23,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Scheduler.Application\Scheduler.Application.csproj"/>
+      <ProjectReference Include="..\..\src\SharedKernel\SharedKernel.csproj" />
     </ItemGroup>
 
 </Project>
