refactor: Move base repository and context to shared folder

--- a/backend/src/Infrastructure/Infrastructure.csproj
+++ b/backend/src/Infrastructure/Infrastructure.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <Folder Include="Calendar\Configurations\"/>
         <Folder Include="Scheduling\Configurations\"/>
+        <Folder Include="Shared\" />
     </ItemGroup>
 
     <ItemGroup>
