--- a/backend/tests/SharedKernel.Tests/SharedKernel.Tests.csproj
+++ b/backend/tests/SharedKernel.Tests/SharedKernel.Tests.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Domain\Domain.csproj" />
       <ProjectReference Include="..\..\src\SharedKernel\SharedKernel.csproj" />
     </ItemGroup>
 
