--- a/backend/src/Application/Application.csproj
+++ b/backend/src/Application/Application.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\Domain\Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Scheduling\Handlers\" />
+    </ItemGroup>
+
 </Project>
