--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionString ": {
-    
+    "DefaultConnection": "Server=localhost,1433;Database=MyScheduler;User Id=sa;Password=MyVeryStrongPassword!?;TrustServerCertificate=True;"
   }
 }
