feat: Set up database connection, initialMigration

--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString ": {
-    "DefaultConnection": "Server=localhost,1433;Database=MyScheduler;User Id=sa;Password=MyVeryStrongPassword!?;TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=MyScheduler;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
   }
 }
