chore: Add dotEnv and .env file for db configuration

--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=MyScheduler;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
+    "DefaultConnection": ""
   }
 }
