--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "@angular/router": "^19.0.5",
     "lucide-angular": "^0.469.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@myschedulerapp/api-client": "0.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
